--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -12,10 +12,11 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
+ *{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+ }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+
