feat: enhance login page layout with Box component; center logo and update styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,3 +27,7 @@
 .auth-body {
   @apply p-4 bg-[#F2F4F7] h-screen overflow-hidden overflow-y-scroll
 }
+
+.center-logo {
+  @apply grid place-items-center
+}
