--- a/app/globals.css
+++ b/app/globals.css
@@ -25,10 +25,14 @@
 .css-1u9des2-indicatorSeparator{
  @apply hidden
 }
+.max-width-util {
+  @apply w-[92%] max-w-[800px]
+}
 
 body {
-  @apply bg-[#F2F4F7] h-screen overflow-hidden overflow-y-scroll w-[92%] max-w-[600px] mx-auto relative
+  @apply bg-[#F2F4F7] h-screen overflow-hidden overflow-y-scroll max-width-util mx-auto relative
 }
+
 
 ::-webkit-scrollbar{
   width: 0;
